[gd_scene load_steps=7 format=3 uid="uid://cogwrv5mtcmj0"]

[ext_resource type="Script" uid="uid://c481lgegjpy6f" path="res://Prefabs/Bullet/paw.gd" id="1_oy6qi"]
[ext_resource type="Texture2D" uid="uid://df8uicxkubwle" path="res://Resources/foxpaw.png" id="2_elvbj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rv53p"]
radius = 69.615

[sub_resource type="Animation" id="Animation_6x6ww"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3cy4l"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(4.43828, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_avjl0"]
_data = {
&"RESET": SubResource("Animation_6x6ww"),
&"fade_out": SubResource("Animation_3cy4l")
}

[node name="Paw" type="Area2D" groups=["bullet"]]
z_index = 6
script = ExtResource("1_oy6qi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("2_elvbj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, -1)
shape = SubResource("CircleShape2D_rv53p")

[node name="DeletionTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_avjl0")
}
autoplay = "fade_out"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeletionTimer" to="." method="_on_deletion_timer_timeout"]
